logs/moveo_moveit/build.make.000.log
[35m[1mScanning dependencies of target std_msgs_generate_messages_lisp[0m
[35m[1mScanning dependencies of target sensor_msgs_generate_messages_lisp[0m
[35m[1mScanning dependencies of target _moveo_moveit_generate_messages_check_deps_ArmJointState[0m
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_lisp
[35m[1mScanning dependencies of target std_msgs_generate_messages_nodejs[0m
[35m[1mScanning dependencies of target sensor_msgs_generate_messages_nodejs[0m
[  0%] Built target _moveo_moveit_generate_messages_check_deps_ArmJointState
[  0%] Built target sensor_msgs_generate_messages_nodejs
[  0%] Built target std_msgs_generate_messages_nodejs
[35m[1mScanning dependencies of target sensor_msgs_generate_messages_eus[0m
[35m[1mScanning dependencies of target std_msgs_generate_messages_eus[0m
[35m[1mScanning dependencies of target sensor_msgs_generate_messages_cpp[0m
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target sensor_msgs_generate_messages_eus
[  0%] Built target sensor_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target std_msgs_generate_messages_py[0m
[35m[1mScanning dependencies of target std_msgs_generate_messages_cpp[0m
[35m[1mScanning dependencies of target sensor_msgs_generate_messages_py[0m
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_py
[35m[1mScanning dependencies of target moveo_moveit_generate_messages_lisp[0m
[35m[1mScanning dependencies of target move_group_1[0m
[35m[1mScanning dependencies of target moveo_moveit_generate_messages_nodejs[0m
[  9%] [34m[1mGenerating Lisp code from moveo_moveit/ArmJointState.msg[0m
[ 18%] [34m[1mGenerating Javascript code from moveo_moveit/ArmJointState.msg[0m
[ 18%] Built target moveo_moveit_generate_messages_lisp
[ 18%] Built target moveo_moveit_generate_messages_nodejs
[35m[1mScanning dependencies of target moveo_moveit_generate_messages_eus[0m
[35m[1mScanning dependencies of target moveo_moveit_generate_messages_cpp[0m
[ 27%] [34m[1mGenerating EusLisp code from moveo_moveit/ArmJointState.msg[0m
[ 36%] [34m[1mGenerating C++ code from moveo_moveit/ArmJointState.msg[0m
[ 45%] [34m[1mGenerating EusLisp manifest code for moveo_moveit[0m
[ 54%] [32mBuilding CXX object CMakeFiles/move_group_1.dir/src/move_group_interface_coor_1.cpp.o[0m
[ 54%] Built target moveo_moveit_generate_messages_cpp
[35m[1mScanning dependencies of target moveo_moveit_generate_messages_py[0m
[ 63%] [34m[1mGenerating Python from MSG moveo_moveit/ArmJointState[0m
[ 72%] [34m[1mGenerating Python msg __init__.py for moveo_moveit[0m
[ 72%] Built target moveo_moveit_generate_messages_py
[35m[1mScanning dependencies of target moveit_convert[0m
[ 81%] [32mBuilding CXX object CMakeFiles/moveit_convert.dir/src/moveit_convert.cpp.o[0m
[ 81%] Built target moveo_moveit_generate_messages_eus
[35m[1mScanning dependencies of target moveo_moveit_generate_messages[0m
[ 81%] Built target moveo_moveit_generate_messages
[ 90%] [32m[1mLinking CXX executable /home/dawid/robotic_arm/devel/.private/moveo_moveit/lib/moveo_moveit/moveit_convert[0m
[ 90%] Built target moveit_convert
In file included from /usr/include/eigen3/Eigen/Core:347:0,
                 from /usr/include/eigen3/Eigen/Geometry:11,
                 from /opt/ros/melodic/include/moveit/robot_model/joint_model.h:47,
                 from /opt/ros/melodic/include/moveit/robot_model/joint_model_group.h:41,
                 from /opt/ros/melodic/include/moveit/robot_model/robot_model.h:47,
                 from /opt/ros/melodic/include/moveit/robot_state/robot_state.h:41,
                 from /opt/ros/melodic/include/moveit/move_group_interface/move_group_interface.h:42,
                 from /home/dawid/robotic_arm/src/moveo_ros/moveo_moveit/src/move_group_interface_coor_1.cpp:1:
/usr/include/eigen3/Eigen/src/Geometry/Transform.h: In instantiation of ‘Eigen::Transform<Scalar, Dim, Mode, _Options>::Transform(const Eigen::Transform<_Scalar, Dim, OtherMode, OtherOptions>&) [with int OtherMode = 2; int OtherOptions = 0; _Scalar = double; int _Dim = 3; int _Mode = 1; int _Options = 0]’:
/home/dawid/robotic_arm/src/moveo_ros/moveo_moveit/src/move_group_interface_coor_1.cpp:65:95:   required from here
/usr/include/eigen3/Eigen/src/Geometry/Transform.h:331:5: error: static assertion failed: YOU_PERFORMED_AN_INVALID_TRANSFORMATION_CONVERSION
     EIGEN_STATIC_ASSERT(EIGEN_IMPLIES(OtherMode==int(Affine)||OtherMode==int(AffineCompact), Mode!=int(Isometry)),
     ^
CMakeFiles/move_group_1.dir/build.make:62: recipe for target 'CMakeFiles/move_group_1.dir/src/move_group_interface_coor_1.cpp.o' failed
make[2]: *** [CMakeFiles/move_group_1.dir/src/move_group_interface_coor_1.cpp.o] Error 1
CMakeFiles/Makefile2:656: recipe for target 'CMakeFiles/move_group_1.dir/all' failed
make[1]: *** [CMakeFiles/move_group_1.dir/all] Error 2
Makefile:140: recipe for target 'all' failed
make: *** [all] Error 2
